data/collection/fixes/descriptions/scala/scala-2613
The following code produces compiler errors:
```scala
class Row

abstract class MyRelation [R <: Row, +Relation <: MyRelation[R, Relation]]

type M = MyRelation[R, Relation] forSome {type R <: Row; type Relation <: MyRelation[R, Relation]}

var (x,y): (String, M) = null 
```

Here are the errors:
```scala
<console>:7: error: type arguments [?,Any] do not conform to class MyRelation's type parameter bounds [R <: Row,+Relation <: MyRelation[R,Relation]]
       var (x,y): (String, M) = null
           ^
<console>:7: error: type arguments [?,Any] do not conform to class MyRelation's type parameter bounds [R <: Row,+Relation <: MyRelation[R,Relation]]
       var (x,y): (String, M) = null
              ^
<console>:6: error: type arguments [?,Any] do not conform to class MyRelation's type parameter bounds [R <: Row,+Relation <: MyRelation[R,Relation]]
object $$iw {
```